# ecfiler

./: .dockerignore  .env.example  .gitignore  BRANDING.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  app.py  docker-compose.yml  package.json  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  court_selector_fix.md
.github/workflows/: ci.yml
.next/: trace  trace-build
docs/: pacer-engagement-plan.md
ecfiler/: __init__.py  __main__.py  app.py  claude_client.py  config.py  diagnostics.py  logging.py  mcp_server.py  pacer_auth.py  pacer_search.py  security.py
ecfiler/agent/: certificate_of_service.py  document_analyzer.py  smart_filer.py
ecfiler/api/: app.py  browser_demo.py  browser_stream.py  streaming.py
ecfiler/browser/: event_crawler.py  filing.py  navigation.py  recovery.py  (+2 more)
site/: index.html
tests/: test_api.py  test_appellate.py  test_batch_validate.py  test_browser_e2e.py  test_certificate.py  test_checklist.py  test_civil_cover_sheet.py  test_claude_client.py  test_cli.py  test_config.py  test_courts.py  test_diagnostics.py  test_document_analyzer.py  test_drafts.py  test_event_crawler.py  test_exhibits.py  test_exhibits_browser.py  test_fees.py  test_history.py  test_integration.py  test_logging.py  test_mcp.py  test_pacer_search.py  test_pdf_validator.py  test_preflight.py  test_recovery.py  test_redaction.py  test_security.py  test_templates.py  test_workflow.py
web/: .env.example  .env.production  .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json
(+71 files in other folders)
