[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecfiler"
version = "0.1.0"
description = "Claude API-powered automated filing for Federal CM/ECF court systems"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "httpx>=0.27",
    "keyring>=25.0",
    "pikepdf>=9.0",
    "playwright>=1.40",
    "pydantic>=2.5",
    "PyMuPDF>=1.24",
    "rich>=13.7",
]

[project.optional-dependencies]
pdf-convert = [
    "ocrmypdf>=16.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
]

[project.scripts]
ecfiler = "ecfiler.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
